<resources>
  <string name="app_name">Metrolog</string>
  <string name="app_tag">Приложение, где живут ваши СИ</string>
  <string name="login">Войти</string>
  <string name="register">Зарегистрироваться</string>
  <string name="registration">Регистрация</string>
  <string name="email">Почта</string>
  <string name="email_example">example@mail.com</string>
  <string name="fullname">ФИО</string>
  <string name="fullname_example">Иванов Иван Иванович</string>
  <string name="password_example">*************</string>
  <string name="password">Пароль</string>
  <string name="password_repeat">Повтор пароля</string>
  <string name="invalidEmail">Некорректный адрес эл.почты</string>
  <string name="alreadyTakenEmail">Введенная эл.почта уже использована</string>
  <string name="invalidPassword">Некорректный пароль. Минимальная длина 8</string>
  <string name="noEqualPassword">Пароли не совпадают</string>
  <string name="invalidFullName">Некорректное ФИО</string>
  <string name="somethingWrong">Что-то пошло не так -_-\nПопробуйте ещё раз</string>
  <string name="weekPassword">Ваш пароль не надежный. Введите другой…</string>
  <string name="invalidCredentialsRegistration">Почта не корректная или уже используеться</string>
  <string name="collisionUser">Почта занята</string>
  <string name="invalidUser">Пользователь не найден. Попробуйте зарегестрироваться сейчас</string>
  <string name="invalidEmailOrPassword">Неверные почта или пароль. Проверьте свои данные или восстановить пароль</string>
  <string name="noVerifiedEmail">Ваша почта не подтверждена\nЧтобы войти подтвердите свою почту (письмо может находиться в папке спам!)</string>
  <string name="successReg">Вы успешно зарегистрированы</string>
  <string name="welcomeText">Для работы с сервисом необходимо авторизоваться.</string>
  <string name="defender">Defender</string>
  <string name="defender_create_pass">Придумайте 5-значный пароль\nВ дальнейшем он будет использваться для входа в приложение</string>
  <string name="change_user">Сменить пользователя</string>
  <string name="successAuth">Вы успешно авторизовались!</string>
  <string name="defener_repeat_password">Повторите пароль</string>
  <string name="defender_no_new">Введите пароль или смените пользователя</string>
  <string name="loading">Загружаем…</string>
  <string name="companies_title">Предприятия</string>
  <string name="continueText">Продолжить</string>
  <string name="noFoundUser">Пользователь не найден. Проверьте введенные данные</string>
  <string name="reset_password">Восстановить пароль</string>
  <string name="reset_password_success_text">На ваш почтовый адресс отправленно письмо с ссылкой для восстановление пароля\n\n(Письмо может быть в папке Спам)</string>
  <string name="nonUniqueName">Не уникальное название</string>
  <string name="search">Поиск</string>
  <string name="empty_data">Данные не найдены</string>
  <string name="add">Добавление</string>
  <string name="enter_node_name">Введите название для предприятия/подразделения</string>
  <string name="name">Название</string>
  <string name="info">Информация</string>
  <string name="nodes">Подразделения</string>
  <string name="nodes_with_name">%1$s: Узлы</string>
  <string name="users_with_name">%1$s: Пользователи</string>
  <string name="measuring_with_name">%1$s: СИ</string>
  <string name="users">Пользователи</string>
  <string name="measuring">СИ</string>
  <string name="company_positions_title">Должностные лица</string>
  <string name="hierarchy_title">Структура подразделений</string>
  <string name="delete_node">Удалить подразделение/предприятие</string>
  <string name="edit">Редактирование</string>
  <string name="head">Технический директор</string>
  <string name="user_profile_avatar">user_profile_avatar</string>
  <string name="add_user">Добавление пользователя</string>
  <string name="add_job_field">Добавление должности</string>
  <string name="edit_job_field">Редактирование должности</string>
  <string name="enter_user_email">Для предоставление пользователю доступ к проекту введите его почту</string>
  <string name="add_button">Добавить</string>
  <string name="user_aready_has_access">У пользователя уже есть доступ к этому проекту</string>
  <string name="job_field_name">Должность</string>
  <string name="job_field_name_example">Папа Карло</string>
  <string name="job_field_role">Уровень доступа</string>
  <string name="role_reader">Читатель</string>
  <string name="role_editor_1">Редактор 1</string>
  <string name="role_editor_2">Редактор 2</string>
  <string name="job_field_user">Пользователь</string>
  <string name="field_job_name_error">Введите название должности</string>
  <string name="field_job_role_error">Уровень доступа не выбран</string>
  <string name="reservedValue">Значение зарезервировано</string>
  <string name="edit_user">Редактирование аккаунта</string>
  <string name="save">Сохранить</string>
  <string name="are_you_sure">Вы уверены?</string>
  <string name="exit_message">Вы уверены, что хотите выйти?</string>
  <string name="delete_node_message">Вы уверены, что хотите удалить подразделение/предприятие?</string>
  <string name="delete_job_field_message">Вы уверены, что хотите удалить должность?</string>
  <string name="delete_user_message">Вы уверены, что хотите удалить пользователя?</string>
  <string name="delete_measuring_message">Вы уверены, что хотите удалить СИ?</string>
  <string name="cancel">Отмена</string>
  <string name="continue_text">Продолжить</string>
  <string name="add_measuring">Добавление СИ</string>
  <string name="type">Тип: %1$s</string>
  <string name="location">Местоположение: %1$s</string>
  <string name="inv_number">Инвентарный номер: %1$s</string>
  <string name="kind">Вид</string>
  <string name="state">Статус</string>
  <string name="conditionTitle">Состояние</string>
  <string name="measuring_name">Наименование <font color="#CC2D2D">*</font></string>
  <string name="type_measuring">Вид СИ <font color="#CC2D2D">*</font></string>
  <string name="category_measuring">Категория СИ <font color="#CC2D2D">*</font></string>
  <string name="measuring_type">Тип <font color="#CC2D2D">*</font></string>
  <string name="inventory_number">Инв. номер</string>
  <string name="serial_number">Серийный номер</string>
  <string name="reg_number_GRSI">Рег. номер ГРСИ</string>
  <string name="manufacturer">Производитель</string>
  <string name="supplier">Поставщик</string>
  <string name="sector_GROEI">Сфера ГРОЕИ</string>
  <string name="measurement_type">Вид измерений <font color="#CC2D2D">*</font></string>
  <string name="range">Предел измерений <font color="#CC2D2D">*</font></string>
  <string name="accuracyСlass">Класс точности <font color="#CC2D2D">*</font></string>
  <string name="graduationPoint">Цена деления</string>
  <string name="status">Статус <font color="#CC2D2D">*</font></string>
  <string name="condition">Состояние <font color="#CC2D2D">*</font></string>
  <string name="conditionDate">Дата состояния</string>
  <string name="releaseDate">Дата выпуска</string>
  <string name="commissioningDate">Дата ввода в эксплутацию</string>
  <string name="measuring_value_name">Величина <font color="#CC2D2D">*</font></string>
  <string name="measuring_range_min">От <font color="#CC2D2D">*</font></string>
  <string name="measuring_range_max">До <font color="#CC2D2D">*</font></string>
  <string name="measuring_units">Единицы измерения<font color="#CC2D2D">*</font></string>
  <string name="measuring_accuracy_class">Класс точности</string>
  <string name="measuring_graduation_point">Цена деления</string>
  <string name="is_required">Это обязательное поле</string>
  <string name="required_min_length">Минимальная длина: %1$d</string>
  <string name="creteMeasuringDescription">Для добавления нового СИ заполните форму</string>
  <string name="passportMeasuringDescription">Вы можете просмотреть паспорт СИ и при наличи прав на изменение отредактировать его</string>
  <string name="overhaulMeasuringDescription">Вы можете просмотреть данные о капительное ремонте СИ и при наличи прав на изменение отредактировать</string>
  <string name="maintenanceRepairMeasuringDescription">Вы можете просмотреть данные о текущем ремонте СИ и при наличи прав на изменение отредактировать</string>
  <string name="verificationRepairMeasuringDescription">Вы можете просмотреть данные о поверке СИ и при наличи прав на изменение отредактировать</string>
  <string name="certificationMeasuringDescription">Вы можете просмотреть данные о аттестации СИ и при наличи прав на изменение отредактировать</string>
  <string name="TOMeasuringDescription">Вы можете просмотреть данные о ТО средства измерения и при наличи прав на изменение отредактировать</string>
  <string name="calibrationMeasuringDescription">Вы можете просмотреть данные о калибровке СИ и при наличи прав на изменение отредактировать</string>
  <string name="createMeasuringError">При заполнении формы допущенны ошибки. Проверьте ещё раз и попробуйте вновь</string>
  <string name="error_pin">Пароль неверный</string>
  <string name="error">Ошибка</string>
  <string name="finalCost">Сохранено как: %1$d руб.</string>
  <string name="item_node_preview_info">Подразделений: %1$d | СИ на подразделении: %2$d</string>
  <string name="ok_pin_error">Хорошо, исправлю</string>
  <string name="reset_password_title">Восстановление пароля</string>
  <string name="reset_password_hint">Для восстановления доступа к аккаунту введите привязанный адрес электронной почты.</string>
  <string name="ok">OK</string>
  <string name="edit2">Редактировать</string>
  <string name="delete">Удалить</string>
  <string name="yes">Да</string>
  <string name="measuring_value_adapter">Измеряемые величины</string>
  <string name="delete_measuring_value">Удаление величины</string>
  <string name="measure">Мера</string>
  <string name="measure_device">Измерительный прибор</string>
  <string name="measuring_transducers">Измерительный преобразователь</string>
  <string name="calibration">Калибровка</string>
  <string name="verification">Поверка</string>
  <string name="certification">Аттестация</string>
  <string name="maintenance_repair">Текущий ремонт</string>
  <string name="to">ТО</string>
  <string name="overhaul">Капитальный ремонт</string>
  <string name="conditions_defining_role">Условия определения роли</string>
  <string name="conditions_defining_role_t1">Роль пользователя в каждом из подразделении присваивается в соответствии со списком должностных лиц.</string>
  <string name="conditions_defining_role_t2">Если пользователь занимает несколько должностей в одном подразделений, то текущая роль соответствует более приоритетной (например, при наличии первой должности с ролью «Читатель», а второй с ролью «Редактор 2» - роль пользователя «Редактор 2»).</string>
  <string name="conditions_defining_role_t3">Роль пользователя наследуется в дочерние подразделения (например, если находясь на подразделении с ролью «Технический директор» пользователь переходит на дочернее подразделение с предполагаемой ролью «Читатель», то роль пользователя будет «Технический директор» несмотря на список должностных лиц)</string>
  <string name="types_authority_in_node">Типы полномочий в подрзделении</string>
  <string name="network_error">Неполадки с интернетом</string>
  <string name="try_with_error">Попробуйте:</string>
  <string name="try_another_connection">‣ подключиться к другой сети - мобильной или Wi-Fi,</string>
  <string name="try_off_VPN">‣ отключить VPN или выбрать в нём другую страну.</string>
  <string name="understand">Понятно</string>
  <string name="export_measuring_to_excel">Экспорт СИ в Excel</string>
  <string name="export_description">Для продолжения операции отметьте необходимые <b>типы отчетов</b></string>
  <string name="information_about_measuring">Информация о СИ</string>
  <string name="export_text">Будут экспортированы только СИ, которые отображаться в данный момент. Используя поисковую строку можно экспортировать СИ по определенным запросам.</string>
</resources>