<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/background_color">

  <LinearLayout
    android:id="@+id/dialog_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/app_padding"
    android:paddingVertical="20dp">

    <TextView
      style="@style/header"
      android:text="@string/conditions_defining_role" />

    <TextView
      style="@style/text.justify"
      android:layout_marginTop="10dp"
      android:text="@string/conditions_defining_role_t1" />

    <TextView
      style="@style/text.justify"
      android:layout_marginTop="5dp"
      android:text="@string/conditions_defining_role_t2" />

    <TextView
      style="@style/text.justify"
      android:layout_marginTop="5dp"
      android:text="@string/conditions_defining_role_t3" />

    <TextView
      style="@style/header"
      android:layout_marginTop="30dp"
      android:text="@string/types_authority_in_node" />
    <!--  Роли и полномочия добавляються программно  -->

  </LinearLayout>
</androidx.core.widget.NestedScrollView>