<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginHorizontal="25dp"
  android:background="@drawable/bg_dialog"
  android:orientation="vertical"
  android:paddingHorizontal="20dp">

  <ImageView
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:layout_marginTop="40dp"
    android:src="@drawable/no_internet" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:fontFamily="@font/montserrat_regular"
    android:text="@string/network_error"
    android:textColor="@color/secondary_color_dark"
    android:textSize="16sp"
    android:textStyle="bold" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:fontFamily="@font/montserrat_regular"
    android:text="@string/try_with_error"
    android:textColor="@color/secondary_color"
    android:textSize="14sp"
    android:textStyle="bold" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:fontFamily="@font/montserrat_regular"
    android:text="@string/try_another_connection"
    android:textColor="@color/secondary_color"
    android:textSize="13sp"
    android:textStyle="bold" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:fontFamily="@font/montserrat_regular"
    android:text="@string/try_off_VPN"
    android:textColor="@color/secondary_color"
    android:textSize="13sp"
    android:textStyle="bold" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:fontFamily="@font/montserrat_regular"
    android:text="Код ошибки: 30-11"
    android:textColor="@color/secondary_color"
    android:textSize="15sp"
    android:textStyle="bold" />

  <Button
    android:id="@+id/buttonOk"
    style="?android:attr/buttonBarButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/button_selector"
    android:fontFamily="@font/montserrat_regular"
    android:text="@string/understand"
    android:textAllCaps="false"
    android:textColor="@color/text_on_primary"
    app:backgroundTint="@null"
    app:tint="@null" />

</LinearLayout>