<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:paddingHorizontal="15dp"
    android:gravity="center"
    android:paddingVertical="10dp">

    <ImageView
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:contentDescription="@null"
      android:src="@drawable/ic_add"
      app:tint="@color/text_on_primary" />

    <TextView
      android:id="@+id/textTitle"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:textSize="18sp"
      android:layout_marginStart="20dp"
      android:textColor="@color/text_on_primary"
      android:layout_height="wrap_content"
      android:text="@string/add"
      android:fontFamily="@font/montserrat_regular"
      />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
      android:layout_width="match_parent"
      android:fontFamily="@font/montserrat_regular"
      android:layout_height="wrap_content"
      android:textColor="@color/secondary_color"
      android:text="@string/enter_node_name"
      android:textSize="16sp" />

    <TextView
      android:id="@+id/textError"
      android:textSize="14sp"
      tools:text="@string/nonUniqueName"
      android:textColor="@color/attentionColor"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

    <EditText
      android:id="@+id/editTextNodeName"
      android:textSize="20sp"
      android:fontFamily="@font/montserrat_regular"
      android:textColor="@color/secondary_color"
      android:layout_marginTop="15dp"
      android:textColorHint="@color/light_gray"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@null"
      android:maxLines="1"
      android:hint="@string/name"
      />

    <Button
      android:id="@+id/buttonOk"
      android:layout_width="wrap_content"
      android:fontFamily="@font/montserrat_regular"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:layout_marginTop="15dp"
      android:background="@drawable/button_wrapper"
      android:text="Ok"
      android:textColor="@color/primary_color"
      app:backgroundTint="@null"
      app:tint="@null" />

  </LinearLayout>

</LinearLayout>